--- a/index-menu.html
+++ b/index-menu.html
@@ -52,7 +52,30 @@
             <li><a href="#" title="Новинки">Новинки</a></li>
             <li><a href="#" title="Очки">Очки</a></li>
             <li><a href="#" title="Футболки">Футболки</a></li>
-            <li><a href="#" title="Аксессуары">Аксессуары</a></li>
+            <li><a href="#" title="Аксессуары">Аксессуары</a>
+              <div class="col-lg-3"></div>
+              <ul>
+                <li><a href="#">Часы</a></li>
+                <li><a href="#">Ремни</a></li>
+                <li><a href="#">Шарфы</a></li>
+                <li><a href="#">Кошельки</a></li>
+              </ul>
+              <div class="col-lg-3"></div>
+              <ul>
+                <li><a href="#">Шапки</a></li>
+                <li><a href="#">Галстуки</a></li>
+                <li><a href="#">Кепки</a></li>
+                <li><a href="#">Подтяжки</a></li>
+              </ul>
+              <div class="col-lg-3">
+                <div class="clock"><img src="images/content/clock.jpg" alt="Часы" class="clock-img img-responsive">
+                  <div class="clock-prise">Часы от 999 руб.</div>
+                </div>
+                <div class="scarf"><img src="images/content/scarf.jpg" alt="Шарфы" class="scarf-img img-responsive">
+                  <div class="scarf-prise">Шарфы от 1199 руб.</div>
+                </div>
+              </div>
+            </li>
             <li><a href="#" title="Сумки">Сумки</a></li>
             <li><a href="#" title="Обувь">Обувь</a></li>
             <li><a href="#" title="Кофты">Кофты</a></li>
@@ -133,11 +156,7 @@
                 </div>
               </div>
               <div class="col-lg-3">
-                <div class="news-item">
-                  <div class="news-item-action">Акция действует еще:
-                    <div class="news-item-action-timer">02:05:08:56</div>
-                  </div><a href="#" title="Комплект белья Calvin Klein белый" class="news-item-link"><img src="images/content/new-items/item-action.jpg" alt="Комплект белья Calvin Klein белый" class="news-item-img img-responsive"></a>
-                  <div class="news-discount-text">Скидка -35%<img src="images/content/new-items/discount.jpg" alt="Скидка -35%" class="news-discount-img img-responsive"></div>
+                <div class="news-item">Товар дня<a href="#" title="Комплект белья Calvin Klein белый" class="news-item-link"><img src="images/content/new-items/item-action.jpg" alt="Комплект белья Calvin Klein белый" class="news-item-img img-responsive"></a>
                   <div class="news-item-textWrap"><a href="#" title="Комплект белья Calvin Klein белый" class="news-item-title">Комплект белья Calvin Klein белый</a>
                     <div class="news-item-description">Комплект нижнего белья</div>
                     <div class="news-item-oldprice">2500 руб.
@@ -266,11 +285,8 @@
         </div>
         <div class="foot-col num4">
           <div class="footblock">
-            <div class="subscribe-title">Скидка 200 руб. на первую покупку</div>
-            <form action="#" method="post" class="subscribe-form">
-              <input type="email" placeholder="E-mail" name="subscribe-form-name" value="" pattern="" required>
-              <button type="submit" name="subscribe-form-btn" value="sending" class="btn subscribe-form-btn">Подписаться</button>
-            </form>
+            <div class="club-title">Вступив в клуб Пижон Вы будете получать информацию о нас. Для членов клуба дополнительные скидки.</div>
+            <button type="submit" name="club-btn" value="sending" class="btn club-form-btn">Вступить в клуб</button>
           </div>
         </div>
       </div>
