--- a/index.html
+++ b/index.html
@@ -12,13 +12,7 @@
     <link rel="stylesheet" href="css/template.css">
     <headmenu class="block">
       <div class="container">
-        <div class="headmenu">
-          <div class="headmenu-action">Акции</div>
-          <div class="headmenu-delivery">Доставка и оплата</div>
-          <div class="headmenu-garants">Гарантии</div>
-          <div class="headmenu-swap">Легкий обмен</div>
-          <div class="headmenu-contacts">Контакты</div>
-        </div><a href="#" class="login">Войти</a>
+        <div class="headmenu"><a href="#" class="headmenu-action">Акции</a><a href="#" class="headmenu-delivery">Доставка и оплата</a><a href="#" class="headmenu-garants">Гарантии</a><a href="#" class="headmenu-swap">Легкий обмен</a><a href="#" class="headmenu-contacts">Контакты</a></div><a href="#" class="login">Войти</a>
       </div>
     </headmenu>
     <header class="header block">
@@ -33,14 +27,7 @@
           <div class="location-address">Литейный Пр. 61</div>
         </div>
         <div class="logo"><a href="/"><img src="images/logo.png" alt="" class="img-responsive"></a></div>
-        <div class="banners">
-          <div class="banners-search">Поиск</div>
-          <div class="banners-delivery">Бесплатная доставка</div>
-          <div class="banners-tesmonials">Отзывы о нас</div>
-          <div class="banners-showroom">Шоурум</div>
-          <div class="banners-register">Регистрация</div>
-          <div class="banners-cart">Корзина</div>
-        </div>
+        <div class="banners"><a href="#" class="banners-search">Поиск</a><a href="#" class="banners-delivery">Бесплатная доставка</a><a href="#" class="banners-tesmonials">Отзывы о нас</a><a href="#" class="banners-showroom">Шоурум</a><a href="#" class="banners-register">Регистрация</a><a href="#" class="banners-cart">Корзина</a></div>
       </div>
     </header>
   </head>
