--- a/search.html
+++ b/search.html
@@ -30,6 +30,12 @@
         <div class="banners"><a href="#" class="banners-search">Поиск</a><a href="#" class="banners-delivery">Бесплатная доставка</a><a href="#" class="banners-tesmonials">Отзывы о нас</a><a href="#" class="banners-showroom">Шоурум</a><a href="#" class="banners-register">Регистрация</a><a href="#" class="banners-cart">Корзина</a></div>
       </div>
     </header>
+    <div class="search">
+      <form name="order-form" action="#" method="post" class="search-form">
+        <input type="text" name="search-form-text" placeholder="Поиск" value="" class="search-form-text">
+        <button type="submit" name="search-form-btn" value="sending" class="search-form-btn"><img src="images/content/search.png" alt="Поиск" class="search-form-img img-responsive"></button>
+      </form>
+    </div>
   </head>
   <body>
     <div class="wrapper">
@@ -39,30 +45,7 @@
             <li><a href="#" title="Новинки">Новинки</a></li>
             <li><a href="#" title="Очки">Очки</a></li>
             <li><a href="#" title="Футболки">Футболки</a></li>
-            <li><a href="#" title="Аксессуары">Аксессуары</a>
-              <div class="col-lg-3"></div>
-              <ul>
-                <li><a href="#">Часы</a></li>
-                <li><a href="#">Ремни</a></li>
-                <li><a href="#">Шарфы</a></li>
-                <li><a href="#">Кошельки</a></li>
-              </ul>
-              <div class="col-lg-3"></div>
-              <ul>
-                <li><a href="#">Шапки</a></li>
-                <li><a href="#">Галстуки</a></li>
-                <li><a href="#">Кепки</a></li>
-                <li><a href="#">Подтяжки</a></li>
-              </ul>
-              <div class="col-lg-3">
-                <div class="clock"><img src="images/content/clock.jpg" alt="Часы" class="clock-img img-responsive">
-                  <div class="clock-prise">Часы от 999 руб.</div>
-                </div>
-                <div class="scarf"><img src="images/content/scarf.jpg" alt="Шарфы" class="scarf-img img-responsive">
-                  <div class="scarf-prise">Шарфы от 1199 руб.</div>
-                </div>
-              </div>
-            </li>
+            <li><a href="#" title="Аксессуары">Аксессуары</a></li>
             <li><a href="#" title="Сумки">Сумки</a></li>
             <li><a href="#" title="Обувь">Обувь</a></li>
             <li><a href="#" title="Кофты">Кофты</a></li>
